--- a/src/main/resources/static/apps/wenhao-javaw/output.css
+++ b/src/main/resources/static/apps/wenhao-javaw/output.css
@@ -1043,6 +1043,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-none {
+  border-radius: 0px;
+}
+
 .rounded-l-md {
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
