新增vue框架前端

--- a/src/main/resources/templates/flowManagement.html
+++ b/src/main/resources/templates/flowManagement.html
@@ -509,6 +509,18 @@
                     "<a href='http://47.236.10.165:8080/apps/wenhao-javaw/package' target='_blank' class='open-btn text-gray-600 hover:text-gray-900'><i class='fas fa-external-link-alt'></i></a></span>"
             },
             {
+                "name": "vue集成用例",
+                "description": "vue集成用例",
+                "type": "综合系统展示",
+                "edges": 1,
+                "cores": 2,
+                "apps": 1,
+                "updateTime": "25/01/2024",
+                "createTime": "25/01/2024",
+                "actions": "<a href='#' class='edit-btn text-indigo-600 hover:text-indigo-900'>Edit</a> <span style='margin-left: 8px;'>" +
+                    "<a href='http://47.236.10.165:8080/apps/wenhao-javaw/#/vuedashboard' target='_blank' class='open-btn text-gray-600 hover:text-gray-900'><i class='fas fa-external-link-alt'></i></a></span>"
+            },
+            {
                 "name": "2048",
                 "description": "小游戏",
                 "type": "游戏",
